fix iframe-wrapper not centered, added recalculation on window resize.

--- a/blocks/iframe/iframe.css
+++ b/blocks/iframe/iframe.css
@@ -15,7 +15,7 @@
 
 .iframe-wrapper {
   position: relative;
-  width: 100%;
+  width: auto;
   min-height: 400px;
   overflow: hidden;
 }
